# pdf2svg2pdf

./: .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Makefile  PLAN.md  README.md  SETUP.md  TODO.md  WORK.md  ci-workflow.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_setup.py  test_simple.py
.github/workflows/: ci.yml  release.yml
docs/: _config.yml  conf.py  filters.md  index.md  usage.md
scripts/: build.sh  local-install.sh  release.sh  test.sh
src/pdf2svg2pdf/: __init__.py  cli.py  config.py  pdf2svg2pdf.py  pdf2svg2pdf_classic.py  types.py
src/pdf2svg2pdf/backends/: __init__.py  base.py  cairo.py  fitz.py  poppler.py
src/pdf2svg2pdf/core/: __init__.py  converter.py  exceptions.py  pipeline.py
src/pdf2svg2pdf/filters/: __init__.py  base.py  pdf.py  svg.py
src/pdf2svg2pdf/utils/: __init__.py  async_utils.py  io.py  security.py  validation.py
tests/: conftest.py  test_classic.py  test_integration.py  test_pdf2svg2pdf.py
