[build-system]
# AVOID CHANGING REQUIRES: IT WILL BE UPDATED BY PYSCAFFOLD!
requires = ["setuptools>=46.1.0", "setuptools_scm[toml]>=5"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# For smarter version schemes and other configuration options,
# check out https://github.com/pypa/setuptools_scm
version_scheme = "release-branch-semver"
local_scheme = "dirty-tag"
write_to = "src/pdf2svg2pdf/_version.py"

[project]
name = "pdf2svg2pdf"
dynamic = ["version"]
description = "Convert PDF to SVG and back with optional transformations"
readme = "README.md"
authors = [
    {name = "Adam Twardoch", email = "adam+github@twardoch.com"},
]
license = {text = "Apache-2.0"}
requires-python = ">=3.12"
dependencies = [
    "fire>=0.5.0",
    "PyMuPDF>=1.21.1",
    "cairocffi>=1.4.0",
    "cssselect2>=0.7.0",
    "tinycss2>=1.2.1",
    "loguru>=0.7.2",
    "rich>=13.7.0",
    "pyyaml>=6.0.1",
    "aiofiles>=23.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.1",
    "pytest-xdist>=3.3.1",
    "mypy>=1.7.0",
    "black>=23.12.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "pre-commit>=3.6.0",
    "hypothesis>=6.92.0",
]

[project.scripts]
pdf2svg2pdf = "pdf2svg2pdf.cli:main"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
strict_concatenate = true
namespace_packages = true
show_error_codes = true
show_column_numbers = true
show_error_context = true

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
force_single_line = false
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --strict-markers --cov=src/pdf2svg2pdf --cov-report=term-missing"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/pdf2svg2pdf"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
