[build-system]
requires = ["hatchling>=1.21", "hatch-vcs>=0.4"]
build-backend = "hatchling.build"

[project]
name = "pdf2svg2pdf"
dynamic = ["version"]
description = "Convert PDF to SVG and back, with optional vector-level transformations in between"
readme = "README.md"
authors = [
    {name = "Adam Twardoch", email = "adam+github@twardoch.com"},
]
license = {text = "Apache-2.0"}
requires-python = ">=3.12"
keywords = ["pdf", "svg", "conversion", "vector", "poppler", "cairo"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
]
dependencies = [
    "fire>=0.5.0",
    "PyMuPDF>=1.21.1",
    "cairosvg>=2.7.0",
    "loguru>=0.7.2",
    "rich>=13.7.0",
    "pyyaml>=6.0.1",
    "aiofiles>=23.2.1",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.1",
    "reportlab>=4.0.0",
]
dev = [
    "pdf2svg2pdf[test]",
    "ruff>=0.6.0",
    "mypy>=1.7.0",
    "pre-commit>=3.6.0",
]

[project.urls]
Homepage = "https://github.com/twardoch/pdf2svg2pdf"
Repository = "https://github.com/twardoch/pdf2svg2pdf"
Documentation = "https://twardoch.github.io/pdf2svg2pdf/"
Issues = "https://github.com/twardoch/pdf2svg2pdf/issues"

[project.scripts]
pdf2svg2pdf = "pdf2svg2pdf.cli:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/pdf2svg2pdf/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/pdf2svg2pdf"]

[tool.hatch.build.targets.sdist]
include = ["src/pdf2svg2pdf", "tests", "README.md", "CHANGELOG.md", "LICENSE.txt"]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = [
    "E501",   # line length is enforced by the formatter, not the linter
    "B008",   # fire/rich idioms call functions in argument defaults
    "SIM105", # explicit try/except reads clearer than contextlib.suppress here
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011", "SIM117"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = false
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true

[[tool.mypy.overrides]]
# The classic and legacy modules are dynamic fire scripts built around
# eval-based filter expressions and str/Path juggling; type-checking them adds
# noise without catching real bugs.
module = [
    "pdf2svg2pdf.pdf2svg2pdf",
    "pdf2svg2pdf.pdf2svg2pdf_classic",
]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --strict-markers"
asyncio_mode = "auto"
markers = [
    "integration: tests that require external binaries (poppler, cairosvg)",
]

[tool.coverage.run]
source = ["src/pdf2svg2pdf"]
omit = ["*/tests/*", "*/_version.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
